--- a/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
@@ -1,10 +1,10 @@
 ---
 title: Updating Formation
 tags: formation, update, release, publish, npm
-
 ---
 
 ## Making updates to formation
+
 You can find a detailed guide on contributing to formation at [https://dev-design.va.gov/documentation/contributing-to-formation](https://dev-design.va.gov/documentation/contributing-to-formation)
 
 ## Publishing Module to NPM
@@ -25,24 +25,26 @@ You'll need to choose what type of version update to make:
 
 > If you are unsure of what to pick, do a major version update on modules that are changing.
 
-### 2. Merge your PR to master
+### 2. Merge your PR to main
 
-Once your changes are approved, squash merge them to master. Also, if your change is a breaking change, please prefix your commit message with `BREAKING CHANGE: `. Also keep in mind that your commit messages will be in a changelog that people use to figure out what has changed between releases, so make sure it accurately describes your changes.
+Once your changes are approved, squash merge them to main. Also, if your change is a breaking change, please prefix your commit message with `BREAKING CHANGE: `. Also keep in mind that your commit messages will be in a changelog that people use to figure out what has changed between releases, so make sure it accurately describes your changes.
 
 ### 3. Build and publish
 
-* Checkout the master branch
-* Run `yarn build`
-* For each module you need to publish, switch to its folder in `packages/` and run `npm publish`.
+- Checkout the main branch
+- Run `yarn build`
+- For each module you need to publish, switch to its folder in `packages/` and run `npm publish`.
 
 ### 4. Create a release
+
 You will need a github [personal access token](https://help.github.com/en/articles/creating-a-personal-access-token-for-the-command-line).
 This should be set as **GITHUB_API_KEY** in your environment variable.
+
 - Navigate to the package folder
 - Run the release script
-    ```
-    $ yarn release
-    ```
+  ```
+  $ yarn release
+  ```
 - Once the script has succeeded, go to the link provided in the console
 - Edit the release and add any relevant information.
 
