--- a/packages/documentation/src/pages/getting-started/workflow/overview.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/overview.mdx
@@ -1,37 +1,50 @@
 ---
-title:  Workflow- Overview
+title: Workflow- Overview
 ---
 
 # VA.gov workflow
 
 <div class="deprecation-message">
-    <h2>We're moving our docs!</h2>
-    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Frontend-workflow.1846083611.html">the latest version of this page</a> on the Platform website.</h3>
-    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+  <h2>We're moving our docs!</h2>
+  <h3>
+    Find{" "}
+    <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Frontend-workflow.1846083611.html">
+      the latest version of this page
+    </a>{" "}
+    on the Platform website.
+  </h3>
+  <h3>
+    Still can't find what you're looking for? Reach out to{" "}
+    <a href="https://dsva.slack.com/archives/CBU0KDSB1">
+      #vfs-platform-support
+    </a>{" "}
+    on Slack.
+  </h3>
 </div>
 
 VA.gov uses a [Continuous Integration](https://www.thoughtworks.com/continuous-integration) process, which consists of the following steps:
 
 1. [Write](/getting-started/workflow/write)
-    - Determine which issue to work on
-    - Create feature branch
-      - branch naming convention {issue-id}-{subject you are working on}
-    - Code new functionality
-    - Write tests for new functionality
-    - Test new functionality on supported [browsers](/platform/front-end-standards/documented-decisions/browser-support/) (Chrome, IE, Safari, Edge)
+   - Determine which issue to work on
+   - Create feature branch
+     - branch naming convention {issue-id}-{subject you are working on}
+   - Code new functionality
+   - Write tests for new functionality
+   - Test new functionality on supported [browsers](/platform/front-end-standards/documented-decisions/browser-support/) (Chrome, IE, Safari, Edge)
 2. [Review](/getting-started/workflow/review)
-    - Submit pull request
-    - Run unit tests and compliance scans (kicked off when a pull request is created)
-    - Test feature on review instance (page link is available on the PR page)
-    - Test and peer review code (read: code review)
+   - Submit pull request
+   - Run unit tests and compliance scans (kicked off when a pull request is created)
+   - Test feature on review instance (page link is available on the PR page)
+   - Test and peer review code (read: code review)
 3. [Deploy](/getting-started/workflow/deploy)
-    - Merge code to stable code base
-    - Jenkins automatically deploys changes merged into `master` to staging and dev
-    - Jenkins automatically deploys master to production every day
+   - Merge code to stable code base
+   - Jenkins automatically deploys changes merged into `main` to staging and dev
+   - Jenkins automatically deploys main to production every day
 
-_Each project's code base has a branch called `master` by default. Anything in `master` is deemed to be stable and deployable. This means that **anything you merge will need to be ready to immediately be live or hidden in some way behind a feature flag**._
+_Each project's code base has a branch called `main` by default. Anything in `main` is deemed to be stable and deployable. This means that **anything you merge will need to be ready to immediately be live or hidden in some way behind a feature flag**._
 
 Merge changes when support can be provided; Avoid merging significant changes at the end of the day or before the weekend.
 
 ## References
+
 [GitHub Flow](https://guides.github.com/introduction/flow/)
