--- a/packages/documentation/src/pages/platform/site-structure/environments.mdx
+++ b/packages/documentation/src/pages/platform/site-structure/environments.mdx
@@ -6,19 +6,32 @@ tags: localhost, development, staging, production, automated deployment
 # Environments
 
 <div class="deprecation-message">
-    <h2>We're moving our docs!</h2>
-    <h3>Find <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Environment-URLs.1851392210.html">the latest version of this page</a> on the Platform website.</h3>
-    <h3>Still can't find what you're looking for? Reach out to <a href="https://dsva.slack.com/archives/CBU0KDSB1">#vfs-platform-support</a> on Slack.</h3>
+  <h2>We're moving our docs!</h2>
+  <h3>
+    Find{" "}
+    <a href="https://depo-platform-documentation.scrollhelp.site/developer-docs/Environment-URLs.1851392210.html">
+      the latest version of this page
+    </a>{" "}
+    on the Platform website.
+  </h3>
+  <h3>
+    Still can't find what you're looking for? Reach out to{" "}
+    <a href="https://dsva.slack.com/archives/CBU0KDSB1">
+      #vfs-platform-support
+    </a>{" "}
+    on Slack.
+  </h3>
 </div>
 
-| Environment | site url | api url | buildtype | NODE_ENV | Deployments |
-| ----------- | -------- | ------------ | --------- | -------- | ----------- |
-| localhost | http://localhost:3001 | http://localhost:3000 | localhost | | |
-| development | https://dev.va.gov | https://dev-api.va.gov | vagovdev | | After a merge to master |
-| staging | https://staging.va.gov | https://staging-api.va.gov | vagovstaging | production | After a merge to master |
-| production | https://www.va.gov | https://api.va.gov | vagovprod | production | Daily, Monday - Friday |
+| Environment | site url               | api url                    | buildtype    | NODE_ENV   | Deployments            |
+| ----------- | ---------------------- | -------------------------- | ------------ | ---------- | ---------------------- |
+| localhost   | http://localhost:3001  | http://localhost:3000      | localhost    |            |                        |
+| development | https://dev.va.gov     | https://dev-api.va.gov     | vagovdev     |            | After a merge to main  |
+| staging     | https://staging.va.gov | https://staging-api.va.gov | vagovstaging | production | After a merge to main  |
+| production  | https://www.va.gov     | https://api.va.gov         | vagovprod    | production | Daily, Monday - Friday |
 
 There are four environments for va.gov:
+
 - **localhost** runs on a local developer's machine
 - **development, staging,** and **production** are shared environments that are accessible publicly.
 
@@ -26,7 +39,7 @@ There are four environments for va.gov:
 
 ## Deployment
 
-- **development, staging,** and **production** have changes to them deployed automatically after pull requests are merged into master.
+- **development, staging,** and **production** have changes to them deployed automatically after pull requests are merged into main.
 - Review instances have changes deployed to them automatically when pull requests are created. Review instances are custom environments based on the shared dev environment.
 
 ## Access and test users
