--- a/packages/documentation/src/pages/platform/tools/feature-toggles.mdx
+++ b/packages/documentation/src/pages/platform/tools/feature-toggles.mdx
@@ -8,21 +8,24 @@ tags: vagovprod, vagovstaging, vagovdev
 Feature toggles can be used in both vets-api and vets-website to manage unreleased features in a continuous integration environment. Feature toggles enable VFS teams to test out new functionality (applications, features, VA.gov content pages, Metalsmith) in the VSP development, staging, or production environments for a set of users. Teams can enable or disable a feature for all users, a percentage of all users, a percentage of all logged-in users, a list of users, or users defined in a method.
 
 Feature toggles:
+
 - Allow for production toggle switching without redeploying vets-website
 - Provide a user interface for managing feature toggle behavior
 - Provide code helpers for handling common user experience scenarios
 - Are powered by an open-source gem called [Flipper gem](https://github.com/jnunemaker/flipper)
 
 See the following sections for information about creating feature toggles:
+
 - [Writing good feature toggles](#writing-good-feature-toggles)
 - Adding a new feature toggle
-   - [Frontend](#add-feature)
-   - [Backend](#backend)
+  - [Frontend](#add-feature)
+  - [Backend](#backend)
 - [Enabling and disabling features](#flipper-ui)
 
 ## <a id="writing-good-feature-toggles">Writing good feature toggles</a>
 
 Keep the following items in mind as you add feature toggles:
+
 - Remember that each environment has its own set of feature toggle values.
 - Test your feature toggle in staging before using it in production.
 - Remove feature toggles as soon as they are not needed.
@@ -40,31 +43,32 @@ Follow these steps to add and use a new feature toggle in vets-website:
 
 2. Add the feature name to vets-api (in snake case) by updating [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml):
 
-  ```yml
- features:
-   app_name_then_your_feature_name:
-     actor_type: user
-     description: >
-       This describes what the feature does and
-       which team is responsible for the toggle.
-  ```
-3. Determine how you want the feature toggle to be "sticky".
-  For the behavior to be consistent across all devices for a logged in user choose "user" as the  actor_type.
-  For the behavior to be consistent for a user for the duration of a cookie within a single browser, regardless of their logged in status choose "cookie_id" as the actor_type.
+```yml
+features:
+  app_name_then_your_feature_name:
+    actor_type: user
+    description: >
+      This describes what the feature does and
+      which team is responsible for the toggle.
+```
 
-4. Run vets-api locally. This can be done on master after your pull request (PR) is merged or off of your feature branch.
+3. Determine how you want the feature toggle to be "sticky".
+   For the behavior to be consistent across all devices for a logged in user choose "user" as the actor_type.
+   For the behavior to be consistent for a user for the duration of a cookie within a single browser, regardless of their logged in status choose "cookie_id" as the actor_type.
+
+4. Run vets-api locally. This can be done on main after your pull request (PR) is merged or off of your feature branch.
 
 5. Navigate to [http://localhost:3000/flipper/features](http://localhost:3000/flipper/features) and verify that you see your new feature name. If not, restart your rails server.
 
-6. Add the feature toggle name to vets-website by updating [featureFlagNames.js](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/utilities/feature-toggles/featureFlagNames.js).
+6. Add the feature toggle name to vets-website by updating [featureFlagNames.js](https://github.com/department-of-veterans-affairs/vets-website/blob/main/src/platform/utilities/feature-toggles/featureFlagNames.js).
 
-    ```js
-    const FEATURE_FLAG_NAMES = Object.freeze({
-     showYourFeatureName: 'app_name_then_your_feature_name',
-    })
-    ```
+   ```js
+   const FEATURE_FLAG_NAMES = Object.freeze({
+     showYourFeatureName: "app_name_then_your_feature_name",
+   });
+   ```
 
-    **Note:** The key should be camelCase for use in JavaScript, but the value should exactly match the toggle name in `features.yml`.
+   **Note:** The key should be camelCase for use in JavaScript, but the value should exactly match the toggle name in `features.yml`.
 
 7. Submit a PR for each feature. Crosslinking the PRs in a comment will make it easier for the reviewers to check.
 
@@ -74,10 +78,10 @@ Follow these steps to add and use a new feature toggle in vets-website:
 
 ```js
 // import the toggleValues helper
-import { toggleValues } from 'platform/site-wide/feature-toggles/selectors';
+import { toggleValues } from "platform/site-wide/feature-toggles/selectors";
 
 // use the toggleValues helper to select the toggle values list
-export const appNameThenYourFeatureName = state =>
+export const appNameThenYourFeatureName = (state) =>
   toggleValues(state).appNameThenYourFeatureName;
 ```
 
@@ -117,17 +121,18 @@ Follow these steps to add and use a new feature toggle in vets-api:
 
 2. Add the feature name to vets-api (in snake case) by updating [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml):
 
-  ```yml
-  features:
-     app_name_then_your_feature_name:
-     actor_type: user
-     description: >
-       This describes what the feature does and
-       which team is responsible for the toggle.
-  ```
+```yml
+features:
+  app_name_then_your_feature_name:
+  actor_type: user
+  description: >
+    This describes what the feature does and
+    which team is responsible for the toggle.
+```
+
 3. Determine how you want the feature toggle to be "sticky".
-  For the behavior to be consistent across all devices for a logged in user choose "user" as the  actor_type.
-  For the behavior to be consistent for a user for the duration of a cookie within a single browser, regardless of their logged in status choose "cookie_id" as the actor_type.
+   For the behavior to be consistent across all devices for a logged in user choose "user" as the actor_type.
+   For the behavior to be consistent for a user for the duration of a cookie within a single browser, regardless of their logged in status choose "cookie_id" as the actor_type.
 
 4. Run vets-api locally. This can be done on master after your PR is merged or off of your feature branch.
 
@@ -175,11 +180,11 @@ You can enable or disable features in the Flipper UI:
 
 1. Navigate to the Flipper UI at the following URLs:
 
-|Environment|URL|
-|---|---|
-|Dev|http://localhost:3000/flipper/features|
-|Staging|https://staging-api.va.gov/flipper/features|
-|Production|https://api.va.gov/flipper/features|
+| Environment | URL                                         |
+| ----------- | ------------------------------------------- |
+| Dev         | http://localhost:3000/flipper/features      |
+| Staging     | https://staging-api.va.gov/flipper/features |
+| Production  | https://api.va.gov/flipper/features         |
 
 2. To access the Flipper UI, you must sign in using an [identity-verified id.me user](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/products/identity-personalization/va.gov-login-process.md) that is listed in [settings.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/settings.yml):
 
@@ -190,16 +195,18 @@ flipper:
     - email1@email.us
 ```
 
-   **Notes:**
-   - In the **Dev** environment, to get around the incompleteness of user data in the sandbox environment, you should sign in with a specific test user - see [`dev-settings.local.yml`](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/vets-api/dev-settings.local.yml.j2#L593) for more information. Credentials for this user can be found [here](https://github.com/department-of-veterans-affairs/va.gov-team-sensitive/blob/master/Administrative/vagov-users/mvi-staging-users.csv).
-   - If you are not on the list, you can add yourself or your teammates to the file.
-   - If you're not sure if your account is identity-verified, you can check by going to [this page](https://www.va.gov/profile/). If you need to verify your account you'll see a "Verify with ID.me" button.
+**Notes:**
+
+- In the **Dev** environment, to get around the incompleteness of user data in the sandbox environment, you should sign in with a specific test user - see [`dev-settings.local.yml`](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/vets-api/dev-settings.local.yml.j2#L593) for more information. Credentials for this user can be found [here](https://github.com/department-of-veterans-affairs/va.gov-team-sensitive/blob/master/Administrative/vagov-users/mvi-staging-users.csv).
+- If you are not on the list, you can add yourself or your teammates to the file.
+- If you're not sure if your account is identity-verified, you can check by going to [this page](https://www.va.gov/profile/). If you need to verify your account you'll see a "Verify with ID.me" button.
 
 3. Once you have logged into the Flipper UI, you can perform the following actions:
+
    - Select "Enable for everyone" or "Disable for everyone" to enable or disable the feature for all users.
    - Use "Percentage of Logged in Users" for a [staged rollout](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/product-management/release-plan-template.md#phase-ii-staged-rollout-also-known-as-unmoderated-production-testing) (gradual rollout or an a/b test).
-       - "Percentage of Logged in Users" will enable the feature for only a percentage of logged in users. It will be applied to the same users each time they return to the site (even when they log out and back in) as long as you don't change the percentage.
-       - If the feature toggle's actor_type in [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml) is set to "cookie_id" rather than "user" then the feature instead applies to only a percentage of users for the duration of a cookie within a single browser, *regardless of their logged in status*. This is useful when you need to apply a staged rollout that involves an unauthenticated user experience.
+     - "Percentage of Logged in Users" will enable the feature for only a percentage of logged in users. It will be applied to the same users each time they return to the site (even when they log out and back in) as long as you don't change the percentage.
+     - If the feature toggle's actor*type in [config/features.yml](https://github.com/department-of-veterans-affairs/vets-api/blob/master/config/features.yml) is set to "cookie_id" rather than "user" then the feature instead applies to only a percentage of users for the duration of a cookie within a single browser, \_regardless of their logged in status*. This is useful when you need to apply a staged rollout that involves an unauthenticated user experience.
    - Use "Percentage of Time" to enable a feature for all users for a percentage of time.
    - Register a "Group" of users to enable a feature for.
    - You can also roll out a feature for a select few users by adding their email address to the “Users” section. For performance reasons, the list of users is intended to be small — do not use this option for hundreds of users.
@@ -208,35 +215,39 @@ flipper:
 
    ![Screen Shot](https://user-images.githubusercontent.com/19188/74881655-b4d11a80-533b-11ea-8e97-fdea24c10830.png)
 
-*The following sections contain information that will be phased out.*
+_The following sections contain information that will be phased out._
 
 ## Testing new applications and updates to existing applications
-*Use the method described above to [add](#add-feature) and [enable/disable](#flipper-ui) feature toggles. The method described in this section will be phased out.*
+
+_Use the method described above to [add](#add-feature) and [enable/disable](#flipper-ui) feature toggles. The method described in this section will be phased out._
 
 In the [staging environment](https://staging.va.gov), you can test unreleased features or applications using [!isProduction()](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/utilities/environment/index.js).
 
 In the [production environment](https://www.va.gov), you can test unreleased features and applications by checking [localstorage](https://github.com/department-of-veterans-affairs/vets-website/blob/master/src/platform/utilities/storage/localStorage.js) for a developer-defined name/value. You can do this by:
+
 - Adding the feature name/value to local storage with a console command in the browser
 - Using application specific code that automatically checks when a certain query parameter is present
 
 **Note:** Unreleased applications can be made available on production behind a password by setting `protected: yes` in [react_routes.yml](https://github.com/department-of-veterans-affairs/devops/blob/master/ansible/deployment/config/revproxy-vagov/vars/react_routes.yml). External teams should work with their DSVA contact to request support for enabling this.
 
 ## Testing content pages
-*Use the method described above to [add](#add-feature) and [enable/disable](#flipper-ui) feature toggles. The method described in this section will be phased out.*
+
+_Use the method described above to [add](#add-feature) and [enable/disable](#flipper-ui) feature toggles. The method described in this section will be phased out._
 
 ### App-landing pages generated by registry.json
+
 Applications can control the HTML landing page associated with the application via a `template` property in the application's entry in the `src/applications/registry.json`. Properties defined inside the `template` property will pass through the Metalsmith templating process the same way as a vagov-content `.md` file. This means that via the `template` property, your appliations entry in `registry.json` can implement a feature toggle the same way as a `.md` file to prevent its HTML page from rendering in production environments. For example:
 
 ```json
 {
-   "appName": "Fantastic application",
-   "entryName": "fantastic-application",
-   "rootUrl": "/path/to/fantastic-application",
-   "template": {
-       "layout": "page-react.html",
-       "title": "Fantastic application",
-       "vagovprod": false
-   }
+  "appName": "Fantastic application",
+  "entryName": "fantastic-application",
+  "rootUrl": "/path/to/fantastic-application",
+  "template": {
+    "layout": "page-react.html",
+    "title": "Fantastic application",
+    "vagovprod": false
+  }
 }
 ```
 
@@ -251,11 +262,13 @@ Unreleased content pages should always be made available on [staging.va.gov](htt
 title: Apply for disability benefits
 vagovprod: false
 ---
+
 <nav aria-label="Breadcrumb" aria-live="polite" class="va-nav-breadcrumbs"
 id="va-breadcrumbs">
 ```
 
 Content pages can be excluded from any or all of these environments:
+
 ```markdown
 vagovprod: false
 vagovstaging: false
@@ -264,7 +277,8 @@ localhost: false
 ```
 
 ## Testing CMS feature toggles
-*Use the method described above to [add](#add-feature) and [enable/disable](#flipper-ui) feature toggles. The method described in this section will be phased out.*
+
+_Use the method described above to [add](#add-feature) and [enable/disable](#flipper-ui) feature toggles. The method described in this section will be phased out._
 
 VA.gov creates some pages based on content from the VA's Drupal CMS. The CMS has its own content model, which can sometimes change. When those changes modify the existing structure of the content model, the queries and templates in vets-website that expect a different model may break. And because the CMS and vets-website are separate systems with different deployment processes, we can't push up changes in both systems simultaneously. In order to keep the two systems in sync, we need to be able to turn features on and off in vets-website depending on what environment we're in, and update that feature state whenever a cms deployment happens.
 
@@ -276,9 +290,10 @@ When running a new vets-website build, the script will fetch all CMS feature tog
 
 Before writing any code to use a new feature toggle, it must first be created from within Drupal for all three environments. The feature toggles can be found at https://dev.cms.va.gov/admin/config/system/feature_toggle for dev. Staging and production have similar pages.
 
-**Important:** The new feature toggle *must* be in *every* Drupal environment or vets-website builds will fail when we try to use it! This is intentional so we don't have "accidentally" false feature toggles when Drupal doesn't have a toggle that vets-website is trying to use.
+**Important:** The new feature toggle _must_ be in _every_ Drupal environment or vets-website builds will fail when we try to use it! This is intentional so we don't have "accidentally" false feature toggles when Drupal doesn't have a toggle that vets-website is trying to use.
 
 ### Using toggles in GraphQL queries
+
 Because the toggles are fetched dynamically, they aren't stored in a file that we can `require` from a GraphQL query file. The build script puts the current toggles are put into `global.cmsFeatureFlags` after it either fetches the most recent toggles or uses the cache.
 
 Keep in mind the advice in the [writing good feature toggles](#writing-good-feature-toggles) section. You should write the logic in a way that is easy to remove later. It's often easier to change some logic and then add a conditional that modifies something with the toggle is not enabled. That lets you simply remove the conditional later.
